--- a/server/bukkit/src/main/resources/plugin.yml
+++ b/server/bukkit/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: LabyModServerAPI
 version: '${version}'
-main: net.labymod.serverapi.server.spigot.LabyModServerAPIPlugin
+main: net.labymod.serverapi.server.bukkit.LabyModServerAPIPlugin
 api-version: '1.20'
