--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Create Issue about an Official Integration of the LabyMod 4 Server API
+    url: https://github.com/LabyMod/labymod4-server-api-integrations/issues/new/choose
+    about: Issues on this repository are only for the LabyMod 4 Server API itself. For official integrations, please use the following link.
   - name: Need Help?
     url: https://labymod.net/dc/dev
     about: Join our Discord server to ask for help regarding the LabyMod 4 Server API.
