update developer portal links

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -7,5 +7,5 @@ contact_links:
     url: https://labymod.net/dc/dev
     about: Join our Discord Server for Developers to ask for help regarding the LabyMod 4 Server API.
   - name: LabyMod Developer Portal
-    url: https://wiki.labymod.net/
+    url: https://dev.labymod.net/pages/server/
     about: Check out our Developer Portal to understand the LabyMod 4 Server API better.
