--- a/server/bukkit/src/main/resources/plugin.yml
+++ b/server/bukkit/src/main/resources/plugin.yml
@@ -1,3 +1,4 @@
 name: LabyModServerAPI
 version: '${version}'
+api-version: '1.13'
 main: net.labymod.serverapi.server.bukkit.LabyModServerAPIPlugin
